--- a/app/app/src/main/res/drawable/side_nav_bar.xml
+++ b/app/app/src/main/res/drawable/side_nav_bar.xml
@@ -1,15 +1,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <corners android:topLeftRadius="0dp"
-        android:topRightRadius="30dp"
-        android:bottomLeftRadius="0dp"
-        android:bottomRightRadius="26dp" />
-
-    <gradient
-        android:angle="135"
-        android:centerColor="#d43b43"
-        android:endColor="#20184d"
-        android:startColor="#20184d"
-        android:type="linear" />
+    <solid android:color="@color/BkMenuLateralBlocoSuperior" />
 </shape>
