--- a/app/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/app/src/main/res/navigation/mobile_navigation.xml
@@ -9,17 +9,17 @@
         android:id="@+id/nav_pontos"
         android:name="com.example.marcatruco.ui.home.HomeFragment"
         android:label="@string/menu_pontos"
-        tools:layout="@layout/fragment_home" />
+        tools:layout="@layout/fragment_pontos" />
 
     <fragment
         android:id="@+id/nav_cartas"
         android:name="com.example.marcatruco.ui.gallery.GalleryFragment"
         android:label="@string/menu_cartas"
-        tools:layout="@layout/fragment_gallery" />
+        tools:layout="@layout/fragment_cartas" />
 
     <fragment
         android:id="@+id/nav_config"
         android:name="com.example.marcatruco.ui.slideshow.SlideshowFragment"
         android:label="@string/menu_config"
-        tools:layout="@layout/fragment_slideshow" />
+        tools:layout="@layout/fragment_config" />
 </navigation>
