--- a/app/app/src/main/res/layout/fragment_pontos.xml
+++ b/app/app/src/main/res/layout/fragment_pontos.xml
@@ -12,7 +12,7 @@
     <LinearLayout
         android:id="@+id/times"
         android:layout_width="match_parent"
-        android:layout_height="100dp"
+        android:layout_height="wrap_content"
         android:orientation="horizontal"
         app:layout_constraintTop_toTopOf="parent">
 
@@ -21,11 +21,11 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:fontFamily="@font/anton_regular"
+            android:text="@string/pontos_nos"
             android:textAlignment="center"
             android:textColor="@color/red"
-            android:fontFamily="@font/anton_regular"
-            android:textSize="50sp"
-            android:text="@string/pontos_nos" />
+            android:textSize="50sp" />
 
         <TextView
             android:id="@+id/txt_eles"
@@ -43,7 +43,7 @@
     <LinearLayout
         android:id="@+id/somas"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="70dp"
         android:orientation="horizontal"
         app:layout_constraintTop_toBottomOf="@+id/times">
 
@@ -129,7 +129,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintTop_toBottomOf="@+id/subs">
+        app:layout_constraintBottom_toTopOf="@+id/lyt_vitorias">
 
         <ImageView
             android:id="@+id/btn_truco"
@@ -148,7 +148,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintTop_toBottomOf="@+id/lyt_btn_truco">
+        app:layout_constraintBottom_toTopOf="@+id/propaganda">
 
         <TextView
             android:id="@+id/txt_vit_nos"
