--- a/App v2/app/src/main/res/layout/fragment_pontos.xml
+++ b/App v2/app/src/main/res/layout/fragment_pontos.xml
@@ -165,6 +165,7 @@
             android:layout_weight="1"
             android:textSize="20sp"
             android:textColor="@color/white"
+            android:backgroundTint="@color/red"
             android:text="ZERAR" />
 
         <TextView
