--- a/App v2/app/src/main/res/navigation/mobile_navigation.xml
+++ b/App v2/app/src/main/res/navigation/mobile_navigation.xml
@@ -3,23 +3,23 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mobile_navigation"
-    app:startDestination="@+id/nav_home">
+    app:startDestination="@+id/nav_pontos">
 
     <fragment
-        android:id="@+id/nav_home"
+        android:id="@+id/nav_pontos"
         android:name="com.example.marcatruco.ui.pontos.PontosFragment"
-        android:label="@string/menu_home"
+        android:label="@string/menu_pontos"
         tools:layout="@layout/fragment_pontos" />
 
     <fragment
-        android:id="@+id/nav_gallery"
+        android:id="@+id/nav_historico"
         android:name="com.example.marcatruco.ui.historico.HistoricoFragment"
-        android:label="@string/menu_gallery"
+        android:label="@string/menu_historico"
         tools:layout="@layout/fragment_historico" />
 
     <fragment
-        android:id="@+id/nav_slideshow"
+        android:id="@+id/nav_configuracoes"
         android:name="com.example.marcatruco.ui.slideshow.SlideshowFragment"
-        android:label="@string/menu_slideshow"
+        android:label="@string/menu_configuracoes"
         tools:layout="@layout/fragment_slideshow" />
 </navigation>
