--- a/App v2/app/src/main/res/navigation/mobile_navigation.xml
+++ b/App v2/app/src/main/res/navigation/mobile_navigation.xml
@@ -19,7 +19,7 @@
 
     <fragment
         android:id="@+id/nav_configuracoes"
-        android:name="com.example.marcatruco.ui.slideshow.SlideshowFragment"
+        android:name="com.example.marcatruco.ui.configuracoes.ConfiguracoesFragment"
         android:label="@string/menu_configuracoes"
-        tools:layout="@layout/fragment_slideshow" />
+        tools:layout="@layout/fragment_configuracoes" />
 </navigation>
