--- a/App v2/app/src/main/res/layout/zerar_pontos.xml
+++ b/App v2/app/src/main/res/layout/zerar_pontos.xml
@@ -34,7 +34,7 @@
         android:id="@+id/btn_zerarvitorias"
         android:layout_marginTop="50dp"
         android:layout_width="250dp"
-        android:layout_height="70dp"
+        android:layout_height="wrap_content"
         android:backgroundTint="#4C4C4C"
         android:textColor="@color/white"
         android:textSize="30sp"
@@ -43,8 +43,8 @@
     <Button
         android:id="@+id/btn_cancelarzerarvitorias"
         android:layout_marginTop="50dp"
-        android:layout_width="150dp"
-        android:layout_height="50dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:backgroundTint="#8A131A"
         android:textColor="@color/white"
         android:textSize="25sp"
