--- a/App v2/app/src/main/res/layout/activity_main.xml
+++ b/App v2/app/src/main/res/layout/activity_main.xml
@@ -19,7 +19,11 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="start"
+        android:backgroundTint="@color/black"
         android:fitsSystemWindows="true"
         app:headerLayout="@layout/nav_header_main"
-        app:menu="@menu/activity_main_drawer" />
+        app:menu="@menu/activity_main_drawer"
+        app:itemRippleColor="@color/red"
+        app:itemTextColor="@color/selector_menu_item_bg"
+        app:itemIconTint="@color/selector_menu_item_bg"/>
 </androidx.drawerlayout.widget.DrawerLayout>
