--- a/App v2/app/src/main/res/menu/activity_main_drawer.xml
+++ b/App v2/app/src/main/res/menu/activity_main_drawer.xml
@@ -6,15 +6,15 @@
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/nav_pontos"
-            android:icon="@drawable/ic_menu_camera"
+            android:icon="@drawable/ic_menu_pontos"
             android:title="@string/menu_pontos" />
         <item
             android:id="@+id/nav_historico"
-            android:icon="@drawable/ic_menu_gallery"
+            android:icon="@drawable/ic_menu_historico"
             android:title="@string/menu_historico" />
         <item
             android:id="@+id/nav_configuracoes"
-            android:icon="@drawable/ic_menu_slideshow"
+            android:icon="@drawable/ic_menu_config"
             android:title="@string/menu_configuracoes" />
     </group>
 </menu>
